[tool.poetry]
name = "sorted-coursach"
version = "0.1.0"
description = ""
authors = ["Maksim Zorihin <maxic499@gmail.com>"]
readme = "README.md"
packages = [{include = "sorted_coursach"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
